# cryo-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ethereum__blocks_22001067_to_22001067.json  ethereum__blocks__00001000_to_00001004.json  ethereum__blocks__22005903_to_22005907.json  ethereum__blocks__22005967_to_22005972.json  pyproject.toml
cryo_mcp/: __init__.py  server.py  sql.py
tests/: __init__.py  test_blocks.py  test_contract_transactions.py  test_cryo.py  test_latest_block.py  test_latest_functions.py  test_mcp_functions.py  test_sql.py  test_transaction_by_hash.py  test_transactions.py
tests/data/: ethereum__blocks__00001000_to_00001004.parquet
