[project]
name = "cryo-mcp"
version = "0.1.4"
description = "MCP server for querying Ethereum blockchain data using cryo"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "z80", email = "z80@ophy.xyz"}
]

keywords = ["ethereum", "blockchain", "cryo", "mcp", "api", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "duckdb>=1.2.1",
    "mcp>=1.3.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/z80dev/cryo-mcp"
"Bug Tracker" = "https://github.com/z80dev/cryo-mcp/issues"

[project.scripts]
cryo-mcp = "cryo_mcp.server:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "ipython>=8.34.0",
    "pytest>=8.3.5",
]
